# RastroPublico

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-indice-documentacao.md  01-visao-e-escopo.md  02-fontes-pncp.md  03-arquitetura-e-operacao.md  04-modelo-e-metricas.md  20-arquitetura-final.md  21-runbook-operacional.md  22-consultas-validacao.sql
notebooks/: 02_carregar_arquivo_bronze.py  02_carregar_bronze.py  03_transformar_contratacoes.py  04_transformar_nucleo.py  05_publicar_gold.py  06_benchmark_inicial.py  07_transformar_contratos.py  08_carregar_pncp_contratos_bronze.py  09_publicar_contexto_e_gold.py  10_preparar_bronze_janela.py
scripts/: audit_corrected_kpis.py  audit_value_semantics.py  build_portfolio_case_study.py  export_databricks_evidence.py  redesign_dashboard.py
src/rastro_publico/: __init__.py  benchmark.py  evidencias.py  operacao.py
src/rastro_publico/coleta/: __init__.py  arquivo.py  arquivo_bronze.py  contexto.py  fontes_contextuais.py  janela.py  lote.py  monitor.py  persistencia.py  pncp.py  vinculos_pncp.py
tests/: conftest.py  test_benchmark.py  test_bronze_spark.py  test_bundle_concorrencia.py  test_coleta_arquivo.py  test_coleta_pncp.py  test_contexto.py  test_contexto_spark.py  test_contratos.py  test_dashboard_design.py  test_evidencias.py  test_fontes_contextuais.py  test_gold.py  test_janela.py  test_lote_bronze.py  test_nucleo_compras.py  test_operacao_pipeline.py  test_package.py  test_portfolio_case_study.py  test_silver_contratacoes.py  test_vinculos_pncp.py
(+5 files in other folders)
