[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "rastro-publico"
version = "0.1.0"
description = "Plataforma analítica batch de contratações públicas brasileiras de tecnologia."
requires-python = ">=3.10,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "pyspark==4.2.0",
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.15,<0.16",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["rastro_publico"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py310"
